2006-12-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Adam.

        Adding new test js-update-style.svg, testing
        dynamic style updates via JS (here: stroke-width change)

        * svg/custom/js-update-style-expected.checksum: Added.
        * svg/custom/js-update-style-expected.png: Added.
        * svg/custom/js-update-style-expected.txt: Added.
        * svg/custom/js-update-style.svg: Added.

2006-12-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Beth.

        Adding new test js-update-pattern.svg, testing
        dynamic pattern updates via JS.

        * svg/custom/js-update-pattern-expected.checksum: Added.
        * svg/custom/js-update-pattern-expected.png: Added.
        * svg/custom/js-update-pattern-expected.txt: Added.
        * svg/custom/js-update-pattern.svg: Added.

2006-12-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Maciej.

        Fix dynamic gradient changes, via JS.

        * svg/custom/js-update-gradient-expected.png:
        * svg/custom/js-update-gradient-expected.txt:
        * svg/custom/js-update-gradient.svg:

2006-12-20  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Sam.

        Add a new set of SVG JavaScript testcases, mostly using SVG DOM.

        js-late-gradient-and-object-creation.svg:
        -> Create gradient, and shape referencing it dynamically.

        js-late-gradient-creation.svg:
        -> Create gradient dynamically. Shape referencing it already exists.

        js-update-bounce.svg:
        -> Scripted Animation which lets a circle bound around and change opacity over the time.
           (Should test repainting issues, no problems with primitives like circle, ellipse..)

        js-update-container.svg:
        -> Updating a group, must update all elements. Works fine.

        js-update-container2.svg:
        -> Same like js-update-container.svg, but updates using SVG CSS.

        js-update-gradient.svg: